--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-15.49MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-18.45MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇩🇪 德国-1.23MB/s(Youtube:不良林), server: 172.104.251.52, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.32MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-513.1KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-12.76MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3508, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-9.80MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-9.76MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3505, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇺🇸 美国-430.8KB/s(Youtube:不良林), server: 20.239.15.148, port: 21552, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-922.0KB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: TWpNNU1qTXhOVEl3TURZdWJXbGpjbTl6YjJaMExtTnZiUQ}
   - {name: 🇨🇳 中国-201.1KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇳 中国-3.25MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-3.45MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-4.29MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇳 中国-3.89MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇯🇵 日本-674.0KB/s(Youtube:不良林), server: 20.89.101.199, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-430.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-430.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,35 +52,34 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-430.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-430.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -88,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-430.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -104,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-430.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -129,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-430.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-922.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
 rules:
