--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.38MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 3025, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-893.4KB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-3.34MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇭🇰 香港-1.71MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20727, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.77MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-514.9KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇯🇵 日本-201.2KB/s(Youtube:不良林), server: 20.89.101.199, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
-  - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-16.63MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3508, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-11.18MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-16.56MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-1.41MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3506, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇩🇪 德国-2.63MB/s(Youtube:不良林), server: 172.104.244.36, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
   - {name: 🇻🇳 越南-4.44MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.88MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-16.12MB/s(Youtube:不良林), server: cmhk1.linhun11.xyz, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, sni: cmhk1.linhun11.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-306.3KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20715, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-893.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-893.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-893.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-893.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-893.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-893.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-893.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-4.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-16.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-306.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
